force-app/main/default/objects/C_Section__c/C_Section__c.object-meta.xml
<CustomObject>
    <description>Section within a page - groups related questions with optional scoring weight</description>
    <label>Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>