force-app/main/default/objects/C_Section__c/fields/C_Bonus__c.field-meta.xml
<CustomField>
    <fullName>C_Bonus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bonus</label>
    <type>Checkbox</type>
</CustomField>