force-app/main/default/objects/C_Section__c/fields/C_Page__c.field-meta.xml
<CustomField>
    <fullName>C_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page</label>
    <referenceTo>C_Page__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>C_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>