force-app/main/default/objects/C_Section__c/fields/C_Weight__c.field-meta.xml
<CustomField>
    <fullName>C_Weight__c</fullName>
    <label>Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>