force-app/main/default/objects/C_Section__c/recordTypes/Form.recordType-meta.xml
<RecordType>
    <fullName>Form</fullName>
    <active>true</active>
    <description>Section placed on a form page</description>
    <label>Form</label>
</RecordType>