force-app/main/default/objects/C_Section__c/recordTypes/Library.recordType-meta.xml
<RecordType>
    <fullName>Library</fullName>
    <active>true</active>
    <description>Reusable section template in the public asset library</description>
    <label>Library</label>
</RecordType>