force-app/main/default/objects/C_Section__c/listViews/All_Sections.listView-meta.xml
<ListView>
    <fullName>All_Sections</fullName>
    <columns>NAME</columns>
    <columns>C_Page__c</columns>
    <columns>C_Order__c</columns>
    <columns>C_Weight__c</columns>
    <columns>C_Bonus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sections</label>
</ListView>